tests/rosetta/out/C/caesar-cipher-1.error
cc: exit status 1
/tmp/caesar-cipher-1.c: In function ‘encipher’:
/tmp/caesar-cipher-1.c:112:15: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  112 |     out = out + shiftRune(tmp3, k);
      |               ^ ~~~~~~~~~~~~~~~~~~
      |                 |
      |                 char *
/tmp/caesar-cipher-1.c: In function ‘mochi_main’:
/tmp/caesar-cipher-1.c:145:37: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  145 |     printf("%s\n", "  Deciphered: " + decipher(ct, key));
      |                    ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                    |                  |
      |                    char *             char *
